// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField should render correctly 1`] = `
<DocumentFragment>
  .css-kx305k {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-kx305k:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-kx305k[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-xmt5qh {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-xmt5qh:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-xmt5qh:focus-within,
.css-xmt5qh:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-xmt5qh[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-xmt5qh[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-xmt5qh[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-xmt5qh[data-checked='true']:focus-within,
.css-xmt5qh[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-xmt5qh[data-disabled='true'] {
  background: #d4dae7;
}

.css-xmt5qh[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="css-kx305k e6hn8de0"
    >
      <div
        class="css-xmt5qh e6hn8de2"
        data-checked="false"
        data-disabled="false"
      >
        <input
          aria-checked="false"
          class="css-p9zju0 e6hn8de1"
          id=":r0:"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly checked 1`] = `
<DocumentFragment>
  .css-kx305k {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-kx305k:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-kx305k[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-xmt5qh {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-xmt5qh:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-xmt5qh:focus-within,
.css-xmt5qh:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-xmt5qh[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-xmt5qh[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-xmt5qh[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-xmt5qh[data-checked='true']:focus-within,
.css-xmt5qh[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-xmt5qh[data-disabled='true'] {
  background: #d4dae7;
}

.css-xmt5qh[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="css-kx305k e6hn8de0"
    >
      <div
        class="css-xmt5qh e6hn8de2"
        data-checked="true"
        data-disabled="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="css-p9zju0 e6hn8de1"
          id=":r4:"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly disabled 1`] = `
<DocumentFragment>
  .css-kx305k {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-kx305k:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-kx305k[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-xmt5qh {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-xmt5qh:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-xmt5qh:focus-within,
.css-xmt5qh:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-xmt5qh[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-xmt5qh[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-xmt5qh[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-xmt5qh[data-checked='true']:focus-within,
.css-xmt5qh[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-xmt5qh[data-disabled='true'] {
  background: #d4dae7;
}

.css-xmt5qh[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="css-kx305k e6hn8de0"
    >
      <div
        class="css-xmt5qh e6hn8de2"
        data-checked="false"
        data-disabled="true"
      >
        <input
          aria-checked="false"
          class="css-p9zju0 e6hn8de1"
          disabled=""
          id=":r2:"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </form>
</DocumentFragment>
`;

exports[`ToggleField should render correctly with label and checked 1`] = `
<DocumentFragment>
  .css-kx305k {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-kx305k:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-kx305k[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-xmt5qh {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-xmt5qh:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-xmt5qh:focus-within,
.css-xmt5qh:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-xmt5qh[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-xmt5qh[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-xmt5qh[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-xmt5qh[data-checked='true']:focus-within,
.css-xmt5qh[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-xmt5qh[data-disabled='true'] {
  background: #d4dae7;
}

.css-xmt5qh[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-p9zju0 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-p9zju0[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="css-kx305k e6hn8de0"
    >
      <div
        class="css-xmt5qh e6hn8de2"
        data-checked="true"
        data-disabled="false"
      >
        <input
          aria-checked="true"
          checked=""
          class="css-p9zju0 e6hn8de1"
          id=":r6:"
          name="test"
          type="checkbox"
        />
      </div>
      test
    </label>
  </form>
</DocumentFragment>
`;
